Fixed horizontal scroll in inspector frame when hovering

--- a/css/admin.less
+++ b/css/admin.less
@@ -218,6 +218,7 @@
 				display: block;
 				width: 100%;
 				height: 100%;
+				overflow-x: hidden;
 			}
 
 		}
