--- a/css/inspector.less
+++ b/css/inspector.less
@@ -217,3 +217,8 @@ body.socss-inactive {
 		}
 	}
 }
+
+body, html {
+	max-width: 100% !important;
+	overflow-x: hidden !important;
+}
